# lightning-server

./: package.json  requirements.txt  server.py
apps/backend/: package.json  tsconfig.json
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  dto.ts  jwt.strategy.ts
apps/backend/src/messages/: dto.ts  messages.controller.ts  messages.gateway.ts  messages.module.ts  messages.service.ts
apps/backend/src/presence/: presence.module.ts  presence.service.ts
apps/backend/src/uploads/: uploads.controller.ts  uploads.service.ts
apps/backend/src/users/: users.service.ts
apps/desktop/: index.html  package.json  tailwind.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src/api/: client.ts  socket.ts
apps/desktop/src/store/: useChatStore.ts
